--- a/app/src/main/res/layout/point_of_interest_detail.xml
+++ b/app/src/main/res/layout/point_of_interest_detail.xml
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".ui.HomeActivity">
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/home_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--app:titleTextColor="@android:color/white"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:elevation="@dimen/material_design_toolbar_elevation"-->
-        <!--app:popupTheme="@style/AppTheme.PopupOverlay"/>-->
-    <FrameLayout
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    tools:context=".ui.PointOfInterestDetailActivity">
+
     <ProgressBar
-        android:id="@+id/pb_home_activity"
+        android:id="@+id/pb_poi_detail_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/tv_progressbar_text_msg"
+        android:id="@+id/tv_poi_detail_pb_text_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -35,74 +22,78 @@
         android:fontFamily="sans-serif"
         android:text="@string/home_progressbar_text_msg"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
-    <LinearLayout
-        android:id="@+id/home_activity_linear_layout"
+    <RelativeLayout
+        android:id="@+id/poi_detail_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical"
         android:visibility="visible">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/home_toolbar"
+        <TextView
+            android:id="@+id/tv_poi_detail_place_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_poi_detail_image"
+            android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textIsSelectable="true"
+            tools:text="The Place Name" />
+
+        <TextView
+            android:id="@+id/tv_poi_detail_place_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_poi_detail_place_name"
+            android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textIsSelectable="true"
+            tools:text="The Place Address" />
+
+        <TextView
+            android:id="@+id/tv_poi_detail_place_rating_Value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_poi_detail_place_address"
+            android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/colorAccent"
+            android:textIsSelectable="true"
+            tools:text="4.9" />
+
+        <RatingBar
+            android:id="@+id/rb_poi_detail_rating_bar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_poi_detail_place_address"
+            android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding"
+            android:layout_toEndOf="@+id/tv_poi_detail_place_rating_Value" />
+
+        <TextView
+            android:id="@+id/rb_poi_detail_user_review"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="@android:color/white"
-            android:background="?attr/colorPrimary"
-            android:elevation="@dimen/material_design_toolbar_elevation"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2">
-
-            <ImageView
-                android:id="@+id/iv_current_place_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/home_activity_layout_image_content_desc"
-                android:scaleType="centerCrop"
-                android:src="@drawable/tinru_home_activity_fallback_image" />
-
-            <TextView
-                android:id="@+id/tv_current_place_city_country"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/black_color_opacity_10"
-                android:fontFamily="sans-serif"
-                android:paddingBottom="@dimen/material_design_phone_grid_layout_margin"
-                android:paddingEnd="@dimen/material_design_phone_grid_layout_margin"
-                android:paddingStart="@dimen/material_design_phone_grid_layout_margin"
-                android:paddingTop="@dimen/material_design_phone_grid_layout_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/color_white"
-                android:textIsSelectable="true"
-                tools:text="London, UK" />
-
-            <Button
-                android:id="@+id/bt_location_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center"
-                android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
-                android:alpha=".8"
-                android:drawablePadding="@dimen/home_search_button_drawable_padding"
-                android:drawableStart="@drawable/tinru_search_icon"
-                android:elevation="@dimen/button_elevation"
-                android:text="@string/home_activity_layout_search_button_text"
-                android:textAllCaps="false"
-                tools:targetApi="lollipop" />
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_poi_detail_place_rating_Value"
+            android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textIsSelectable="true"
+            tools:text="This space is for adding user review which will be done later, still thinking whether to go with recyclerview or not" />
 
         <LinearLayout
+            android:id="@+id/poi_detail_nearby_linear_layout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rb_poi_detail_user_review"
             android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
-            android:layout_weight="1"
             android:gravity="bottom"
             android:orientation="vertical">
 
@@ -225,21 +216,13 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/iv_home_powered_by_google"
+            android:id="@+id/iv_poi_detail_powered_by_google"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/powered_by_google_logo_margin"
+            android:layout_below="@+id/poi_detail_nearby_linear_layout"
+            android:layout_centerInParent="true"
+            android:layout_margin="@dimen/powered_by_google_logo_margin"
             android:contentDescription="@string/google_powered_by_image_content_desc"
             android:src="@drawable/powered_by_google_light" />
-    </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/tinru_fab_search" />
+    </RelativeLayout>
 </FrameLayout>
-</LinearLayout>
