--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="material_design_phone_grid_layout_margin">8dp</dimen>
-    
+    <dimen name="material_design_toolbar_elevation">4dp</dimen>
+
     <dimen name="home_search_button_drawable_padding">10dp</dimen>
     <dimen name="home_search_button_bottom_padding">40dp</dimen>
     <dimen name="home_nearby_bottom_padding">4dp</dimen>
