--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="PoiDetailTheme" parent="BaseTheme">
+    <style name="AppTheme.PoiDetailTheme" parent="BaseTheme">
         <!-- to make the CollapsingToolbarLayout transparent for API level 21 -->
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="AppTheme.FlightListTheme" parent="BaseTheme">
+        <item name="android:windowEnterTransition">@transition/flight_enter</item>
     </style>
 </resources>
