--- a/app/src/main/res/layout/single_flight_item.xml
+++ b/app/src/main/res/layout/single_flight_item.xml
@@ -190,6 +190,7 @@
         android:id="@+id/tv_single_item_flight_fare_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:text="@string/single_flight_fare_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
