--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="amadeus_flight_search_non_stop_flag">true</bool>
+    <bool name="landscape_mode">false</bool>
 </resources>
