--- a/app/src/main/res/layout/activity_flight_list.xml
+++ b/app/src/main/res/layout/activity_flight_list.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.FlightListActivity">
 
     <ProgressBar
@@ -36,22 +36,22 @@
             android:id="@+id/flight_list_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="@android:color/white"
             android:background="?attr/colorPrimary"
             android:elevation="@dimen/material_design_toolbar_elevation"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@android:color/white" />
 
         <TextView
             android:id="@+id/tv_flight_list_orig_to_destination_value"
-            android:layout_below="@+id/flight_list_toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/flight_list_toolbar"
             android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            tools:text="London to Kolkata"
-            android:textIsSelectable="true" />
+            android:textIsSelectable="true"
+            tools:text="London to Kolkata" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_flight_list"
