--- a/app/src/main/res/layout/activity_near_by_grid.xml
+++ b/app/src/main/res/layout/activity_near_by_grid.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.NearByGridActivity">
 
     <ProgressBar
@@ -38,26 +38,26 @@
             android:id="@+id/nearby_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="@android:color/white"
             android:background="?attr/colorPrimary"
             android:elevation="@dimen/material_design_toolbar_elevation"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@android:color/white" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_nearby_item_grid"
-            android:layout_above="@+id/iv_nearby_powered_by_google"
-            android:layout_below="@+id/nearby_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_above="@+id/iv_nearby_powered_by_google"
+            android:layout_below="@+id/nearby_toolbar" />
 
         <ImageView
             android:id="@+id/iv_nearby_powered_by_google"
-            android:layout_margin="@dimen/powered_by_google_logo_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
+            android:layout_margin="@dimen/powered_by_google_logo_margin"
             android:src="@drawable/powered_by_google_light" />
     </RelativeLayout>
 </FrameLayout>
