--- a/app/src/main/res/layout/single_point_of_interest_item.xml
+++ b/app/src/main/res/layout/single_point_of_interest_item.xml
@@ -1,62 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="@dimen/poi_list_elevation"
-    android:padding="@dimen/material_design_phone_grid_layout_margin"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="@dimen/poi_list_elevation"
+    android:padding="@dimen/material_design_phone_grid_layout_margin">
 
     <ImageView
         android:id="@+id/iv_poi_single_item_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:scaleType="centerCrop"
+        android:transitionName="@string/point_of_interest_image_transition"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:transitionName="@string/point_of_interest_image_transition"
         app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/iv_poi_single_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/poi_list_left_text_padding"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/tv_poi_single_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Tower of London"
-        android:fontFamily="sans-serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:orientation="vertical"
+        android:paddingStart="@dimen/poi_list_left_text_padding">
 
-    <TextView
-        android:id="@+id/tv_poi_single_item_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        tools:text="Near London Bridge, London, UK." />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/tv_poi_single_item_rating_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="4.8"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/colorAccent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+        <TextView
+            android:id="@+id/tv_poi_single_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            tools:text="Tower of London" />
 
-    <RatingBar
-        android:id="@+id/rb_poi_single_item_rating_bar"
-        style="?android:attr/ratingBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding"/>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_poi_single_item_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            tools:text="Near London Bridge, London, UK." />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_poi_single_item_rating_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/colorAccent"
+                tools:text="4.8" />
+
+            <RatingBar
+                android:id="@+id/rb_poi_single_item_rating_bar"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
